--- a/WpfApp1/Views/AddBookDialog.xaml
+++ b/WpfApp1/Views/AddBookDialog.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BookCathalog.Views"
+             xmlns:validators="clr-namespace:BookCathalog.Models.Validators"
              mc:Ignorable="d" 
              Height="440" Width="800">
     <Grid>
@@ -30,17 +31,43 @@
         <TextBlock Text="FrontPage" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="6"/>
         <TextBox Grid.Column="1" Grid.Row="0">
             <TextBox.Text>
-                <Binding Path="BookTitle"
-             UpdateSourceTrigger="PropertyChanged" >
+                <Binding Path="SomeBook.Title" 
+                         UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
-                        <!--<c:AgeRangeRule Min="21" Max="130"/>-->
+                        <!--DataErrorValidationRule checks for validation 
+                            errors raised by the IDataErrorInfo object.-->
+                        <!--Alternatively, you can set ValidationOnDataErrors="True" on the Binding.-->
+                        <DataErrorValidationRule/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+            <!--<TextBox.Text>
+                <Binding Path="BookTitle" UpdateSourceTrigger="PropertyChanged">
+                    <Binding.ValidationRules>
+                        <validators:TextRules/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>-->
+        </TextBox>
+        <TextBox Grid.Column="1" Grid.Row="1">
+            <TextBox.Text>
+                <Binding Path="Author" UpdateSourceTrigger="PropertyChanged">
+                    <Binding.ValidationRules>
+                        <validators:TextRules/>
                     </Binding.ValidationRules>
                 </Binding>
             </TextBox.Text>
         </TextBox>
-        <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Author}"/>
-        <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Year}"/>
-        <TextBox Grid.Column="1" Grid.Row="3" Text="{Binding Isbn}"/>
+        <TextBox Grid.Column="1" Grid.Row="2">
+            <TextBox.Text>
+                <Binding Path="Year" UpdateSourceTrigger="LostFocus">
+                    <Binding.ValidationRules>
+                        <validators:YearRules/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
+            <TextBox Grid.Column="1" Grid.Row="3" Text="{Binding Isbn}"/>
         <TextBox Grid.Column="1" Grid.Row="4" Text="{Binding Guid}"/>
         <TextBox Grid.Column="1" Grid.Row="5" Text="{Binding About}"/>
         
