--- a/WpfApp1/Views/AddBookDialog.xaml
+++ b/WpfApp1/Views/AddBookDialog.xaml
@@ -29,49 +29,69 @@
         <TextBlock Text="GUID" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="4"/>
         <TextBlock Text="About" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="5"/>
         <TextBlock Text="FrontPage" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="6"/>
+        
         <TextBox Grid.Column="1" Grid.Row="0">
             <TextBox.Text>
-                <Binding Path="SomeBook.Title" 
+                <Binding Path="CurrentBook.Title" 
                          UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
-                        <!--DataErrorValidationRule checks for validation 
-                            errors raised by the IDataErrorInfo object.-->
-                        <!--Alternatively, you can set ValidationOnDataErrors="True" on the Binding.-->
                         <DataErrorValidationRule/>
                     </Binding.ValidationRules>
                 </Binding>
             </TextBox.Text>
-            <!--<TextBox.Text>
-                <Binding Path="BookTitle" UpdateSourceTrigger="PropertyChanged">
-                    <Binding.ValidationRules>
-                        <validators:TextRules/>
-                    </Binding.ValidationRules>
-                </Binding>
-            </TextBox.Text>-->
         </TextBox>
+        
         <TextBox Grid.Column="1" Grid.Row="1">
             <TextBox.Text>
-                <Binding Path="Author" UpdateSourceTrigger="PropertyChanged">
+                <Binding Path="CurrentBook.Author" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
-                        <validators:TextRules/>
+                        <DataErrorValidationRule/>
                     </Binding.ValidationRules>
                 </Binding>
             </TextBox.Text>
         </TextBox>
+
         <TextBox Grid.Column="1" Grid.Row="2">
             <TextBox.Text>
-                <Binding Path="Year" UpdateSourceTrigger="LostFocus">
-                    <Binding.ValidationRules>
-                        <validators:YearRules/>
+                <Binding Path="CurrentBook.Year" UpdateSourceTrigger="PropertyChanged">
+                      <Binding.ValidationRules>
+                        <DataErrorValidationRule/>
                     </Binding.ValidationRules>
                 </Binding>
             </TextBox.Text>
         </TextBox>
-            <TextBox Grid.Column="1" Grid.Row="3" Text="{Binding Isbn}"/>
-        <TextBox Grid.Column="1" Grid.Row="4" Text="{Binding Guid}"/>
-        <TextBox Grid.Column="1" Grid.Row="5" Text="{Binding About}"/>
         
-        <Grid Grid.Row="6" Grid.Column="1">
+        <TextBox Grid.Column="1" Grid.Row="3">
+            <TextBox.Text>
+                <Binding Path="CurrentBook.Isbn" UpdateSourceTrigger="PropertyChanged">
+                    <Binding.ValidationRules>
+                        <DataErrorValidationRule/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
+        
+        <TextBox Grid.Column="1" Grid.Row="4">
+        <TextBox.Text>
+            <Binding Path="CurrentBook.Guid" UpdateSourceTrigger="PropertyChanged">
+                <Binding.ValidationRules>
+                    <DataErrorValidationRule/>
+                </Binding.ValidationRules>
+            </Binding>
+        </TextBox.Text>
+        </TextBox>
+    
+            <TextBox Grid.Column="1" Grid.Row="5">
+            <TextBox.Text>
+                <Binding Path="CurrentBook.About" UpdateSourceTrigger="PropertyChanged">
+                    <Binding.ValidationRules>
+                        <DataErrorValidationRule/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
+
+                <Grid Grid.Row="6" Grid.Column="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="100"/>
                 <ColumnDefinition Width="*"/>
