--- a/WpfApp1/Views/MainWindow.xaml
+++ b/WpfApp1/Views/MainWindow.xaml
@@ -12,14 +12,38 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <ListView
-            ItemsSource="{Binding Customers}"
-            SelectedItem="{Binding SelectedCustomer}"
-        />
-        <Button
-            Grid.Row="1" Width="80" Height="40"
-            Command="{Binding CommandLoad}"
-            Content="ADD"
-        />
+        <ListBox Grid.Row="0" ItemsSource="{Binding AllBooks}" SelectedItem="{Binding SelectedBook}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="600"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <StackPanel >
+                            <TextBlock Text="{Binding Title}"/>
+                            <TextBlock Text="{Binding Author}"/>
+                            <TextBlock Text="{Binding Year}"/>
+                            <TextBlock Text="{Binding Isbn}"/>
+                            <TextBlock Text="{Binding Guid}"/>
+                            <TextBlock Text="{Binding About}"/>
+                        </StackPanel>
+                        <Image Grid.Column="1" Width="100" Height="100" Source="{Binding FrontPage}"/>
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <StackPanel Grid.Row="1" Orientation="Horizontal">
+            <StackPanel.Resources>
+                <Style TargetType="{x:Type Button}">
+                    <Setter Property="Margin" Value="10,10,10,10"/>
+                    <Setter Property="Width" Value="80"/>
+                    <Setter Property="Height" Value="40"/>
+                </Style>
+            </StackPanel.Resources>
+            <Button Command="{Binding CommandLoad}" Content="ADD"/>
+            <Button Command="{Binding CommandChange}" Content="CHANGE"/>
+            <Button Command="{Binding CommandDelete}" Content="DELETE"/>
+        </StackPanel>
     </Grid>
 </Window>
