--- a/WpfApp1/Views/AddBookDialog.xaml
+++ b/WpfApp1/Views/AddBookDialog.xaml
@@ -7,99 +7,15 @@
              mc:Ignorable="d" 
              Height="440" Width="800">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="100"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <TextBlock Text="Title" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="0"/>
-        <TextBlock Text="Author" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="1"/>
-        <TextBlock Text="Year" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="2"/>
-        <TextBlock Text="ISBN" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="3"/>
-        <TextBlock Text="GUID" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="4"/>
-        <TextBlock Text="About" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="5"/>
-        <TextBlock Text="FrontPage" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="6"/>
-        
-        <TextBox Grid.Column="1" Grid.Row="0">
-            <TextBox.Text>
-                <Binding Path="CurrentBook.Title" 
-                         UpdateSourceTrigger="PropertyChanged">
-                    <Binding.ValidationRules>
-                        <DataErrorValidationRule/>
-                    </Binding.ValidationRules>
-                </Binding>
-            </TextBox.Text>
-        </TextBox>
-        
-        <TextBox Grid.Column="1" Grid.Row="1">
-            <TextBox.Text>
-                <Binding Path="CurrentBook.Author" UpdateSourceTrigger="PropertyChanged">
-                    <Binding.ValidationRules>
-                        <DataErrorValidationRule/>
-                    </Binding.ValidationRules>
-                </Binding>
-            </TextBox.Text>
-        </TextBox>
-
-        <TextBox Grid.Column="1" Grid.Row="2" PreviewTextInput="PreviewYearInput">
-            <TextBox.Text>
-                <Binding Path="CurrentBook.Year" UpdateSourceTrigger="PropertyChanged">
-                      <Binding.ValidationRules>
-                        <DataErrorValidationRule/>
-                    </Binding.ValidationRules>
-                </Binding>
-            </TextBox.Text>
-        </TextBox>
-        
-        <TextBox Grid.Column="1" Grid.Row="3">
-            <TextBox.Text>
-                <Binding Path="CurrentBook.Isbn" UpdateSourceTrigger="PropertyChanged">
-                    <Binding.ValidationRules>
-                        <DataErrorValidationRule/>
-                    </Binding.ValidationRules>
-                </Binding>
-            </TextBox.Text>
-        </TextBox>
-        
-        <TextBox Grid.Column="1" Grid.Row="4">
-        <TextBox.Text>
-            <Binding Path="CurrentBook.Guid" UpdateSourceTrigger="PropertyChanged">
-                <Binding.ValidationRules>
-                    <DataErrorValidationRule/>
-                </Binding.ValidationRules>
-            </Binding>
-        </TextBox.Text>
-        </TextBox>
-    
-            <TextBox Grid.Column="1" Grid.Row="5">
-            <TextBox.Text>
-                <Binding Path="CurrentBook.About" UpdateSourceTrigger="PropertyChanged">
-                    <Binding.ValidationRules>
-                        <DataErrorValidationRule/>
-                    </Binding.ValidationRules>
-                </Binding>
-            </TextBox.Text>
-        </TextBox>
-
-                <Grid Grid.Row="6" Grid.Column="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="100"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Button Content ="Select" Height="50" Width="100" Grid.Column="0" Grid.Row="6" Command="{Binding SelectFrontPageCommand}"/>
-            <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding FrontPageLocation}"/>
+        <local:BookView Book="{Binding CurrentBook}">
             
-        </Grid>
-        <Button Content="Add" Grid.Column="1" Grid.Row="7" Width="200" Height="30" Command="{Binding AddBookCommand}"/>
+        </local:BookView>
+
+                <Button Content="Add" Grid.Column="1" Grid.Row="7" Width="200" Height="30" Command="{Binding AddBookCommand}"/>
         
     </Grid>
 </UserControl>
