--- a/WpfApp1/Views/BookView.xaml
+++ b/WpfApp1/Views/BookView.xaml
@@ -5,11 +5,17 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BookCathalog.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="400" d:DesignWidth="800">
-    <Grid>
+             d:DesignHeight="400" d:DesignWidth="900">
+    <Grid DataContext="{Binding RelativeSource={RelativeSource FindAncestor, 
+                               AncestorType={x:Type local:BookView}}}">
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="400"/>
+            <ColumnDefinition Width="300"/>
+        </Grid.ColumnDefinitions>
+            <Grid>
+            <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="300"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -28,9 +34,9 @@
         <TextBlock Text="About" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="5"/>
         <TextBlock Text="FrontPage" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="6"/>
 
-        <TextBox Grid.Column="1" Grid.Row="0">
+            <TextBox Grid.Column="1" Grid.Row="0">
             <TextBox.Text>
-                <Binding Path="CurrentBook.Title" 
+                <Binding Path="Book.Title" 
                          UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
                         <DataErrorValidationRule/>
@@ -41,7 +47,7 @@
 
         <TextBox Grid.Column="1" Grid.Row="1">
             <TextBox.Text>
-                <Binding Path="CurrentBook.Author" UpdateSourceTrigger="PropertyChanged">
+                <Binding Path="Book.Author" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
                         <DataErrorValidationRule/>
                     </Binding.ValidationRules>
@@ -51,7 +57,7 @@
 
         <TextBox Grid.Column="1" Grid.Row="2" PreviewTextInput="PreviewYearInput">
             <TextBox.Text>
-                <Binding Path="CurrentBook.Year" UpdateSourceTrigger="PropertyChanged">
+                <Binding Path="Book.Year" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
                         <DataErrorValidationRule/>
                     </Binding.ValidationRules>
@@ -61,7 +67,7 @@
 
         <TextBox Grid.Column="1" Grid.Row="3">
             <TextBox.Text>
-                <Binding Path="CurrentBook.Isbn" UpdateSourceTrigger="PropertyChanged">
+                <Binding Path="Book.Isbn" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
                         <DataErrorValidationRule/>
                     </Binding.ValidationRules>
@@ -71,7 +77,7 @@
 
         <TextBox Grid.Column="1" Grid.Row="4">
             <TextBox.Text>
-                <Binding Path="CurrentBook.Guid" UpdateSourceTrigger="PropertyChanged">
+                <Binding Path="Book.Guid" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
                         <DataErrorValidationRule/>
                     </Binding.ValidationRules>
@@ -81,23 +87,17 @@
 
         <TextBox Grid.Column="1" Grid.Row="5">
             <TextBox.Text>
-                <Binding Path="CurrentBook.About" UpdateSourceTrigger="PropertyChanged">
+                <Binding Path="Book.About" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
                         <DataErrorValidationRule/>
                     </Binding.ValidationRules>
                 </Binding>
             </TextBox.Text>
         </TextBox>
-
-        <Grid Grid.Row="6" Grid.Column="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="100"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Button Content ="Select" Height="50" Width="100" Grid.Column="0" Grid.Row="6" Command="{Binding SelectFrontPageCommand}"/>
-            <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding FrontPageLocation}"/>
-
-        </Grid>
+        
+        <Button Grid.Row="6" HorizontalAlignment="Left" Grid.Column="1" Content ="Select" Height="50" Width="100" VerticalAlignment="Top" Click="Button_Click"/>
 
     </Grid>
+        <Image Grid.Column="1" Grid.Row="0" Stretch="UniformToFill" Source="{Binding Book.FrontPage}"/>
+        </Grid>
 </UserControl>
